--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+ <!-- =======================================================
+  * Template Name: Kelly
+  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
+  * Updated: Aug 07 2024 with Bootstrap v5.3.3
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
   
 <head>
   <meta charset="utf-8">
