--- a/vtherapy-details.html
+++ b/vtherapy-details.html
@@ -93,28 +93,36 @@
 
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide"> <!--Main Page-->
-                  <img src="assets/img/projects/vtherapy/homepage.png" style = "margin-top: 50px; height: 400px" alt="">
+                <div class="swiper-slide"> 
+                  <img src="assets/img/projects/vtherapy/homepage.png" style = "margin-top: 20px; height: 320px" alt="">
                 </div>
 
-                <!-- <div class="swiper-slide"> Camera
-                  <img src="" alt="">
+                <div class="swiper-slide">
+                  <img src="assets/img/projects/vtherapy/prediction-1.png" style = "margin-top: 20px; height: 320px" alt="">
                 </div>
 
-                <div class="swiper-slide"> Visualisation Analysis Page
-                  <img src="" alt="">
+                <div class="swiper-slide"> 
+                  <img src="assets/img/projects/vtherapy/prediction-2.png" style = "margin-top: 20px; height: 320px" alt="">
                 </div>
 
-                <div class="swiper-slide"> Chat Bot Page
-                  <img src="" alt="">
-                </div> -->
-
-                <div class="swiper-slide"> <!--Appointment Booking Page-->
-                    <img src="assets/img/projects/vtherapy/book-appt.png" alt="">
+                <div class="swiper-slide">  
+                  <img src="assets/img/projects/vtherapy/track-1.png" style = "margin-top: 20px; height: 320px" alt="">
                 </div>
 
-                <div class="swiper-slide"> <!--Video Call with Physiotherapist Page-->
-                    <img src="assets/img/projects/vtherapy/video-call-with-pt.png" alt="">
+                <div class="swiper-slide"> 
+                  <img src="assets/img/projects/vtherapy/track-2.png" style = "margin-top: 20px; height: 320px" alt="">
+                </div>
+
+                <div class="swiper-slide"> 
+                  <img src="assets/img/projects/vtherapy/chatbot.png" style = "margin-top: 20px; height: 320px" alt="">
+                </div>
+
+                <div class="swiper-slide"> 
+                    <img src="assets/img/projects/vtherapy/book-appt.png" style = "margin-top: 20px; height: 320px" alt="">
+                </div>
+
+                <div class="swiper-slide"> 
+                    <img src="assets/img/projects/vtherapy/video-call-with-pt.png" style = "margin-top: 20px; height: 320px" alt="">
                 </div>
 
               </div>
