--- a/experience.html
+++ b/experience.html
@@ -75,6 +75,20 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
+            <a href="ejp.html" style="text-decoration: none; color: inherit;">
+              <div class="col-lg-3 col-md-3 portfolio-item isotope-item filter-product">
+                <div class = "card-exp">
+                  <img src="assets/img/experience/ejp-logo.jpg" class="card-img-top" style="margin-top: -7px; height : 250px;width: 205px; margin-left: 48px ;"  alt="">
+                  <div class="portfolio-info">
+                    <a href="ejp.html" title="More Details" class="clickable-heading">                  
+                    <h4 style="margin-top: 5px">Data Steward</h4>
+                    </a>
+                    <p>Feb 2025 - Present</p>
+                  </div>
+                </div>
+              </div><!-- End Portfolio Item -->
+            </a>
+            
             <a href="chime.html" style="text-decoration: none; color: inherit;">
               <div class="col-lg-3 col-md-2 portfolio-item isotope-item filter-product">
                 <div class = "card-exp">
